--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Self Development</title>
     <link rel="stylesheet" type="text/css" href="index.css" />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Londrina+Solid&display=swap" rel="stylesheet">
 
 <div class="topnav">
 
@@ -25,7 +27,7 @@
 </div>
 <button class="btn1">Health</button>
 <button class="btn2">Guitar</button>
-<button class="btn3">Portfolio</button>
+<a target="0" href="https://abdullahtayeh.co.uk/"><button class="btn3" >Portfolio</button></a>
 <button class="btn4">E-Learnings</button>
 <button class="btn5">Research</button>
 </body>
