--- a/index.html
+++ b/index.html
@@ -13,18 +13,13 @@
 
 <div class="topnav">
 
-<<<<<<< Updated upstream
-  <a class="active" href="#home">HOME</a>
-  <a href="#Contact">CONTACT</a>
-  <a href="#about">ABOUT</a>
-=======
   <a class="active" href="/index.html">HOME</a>
   <a href="/contact.html">CONTACT</a>
   <a href="">ABOUT</a>
->>>>>>> Stashed changes
   <a href="#news">NEWS</a>
-  <button class="signin">Sign In</button>
-  <button class="register">Register</button>
+  <!-- <button class="signin">Sign In</button> -->
+  <button class="glow-on-hover" type="button">Sign In</button>
+  <button class="glow-on-hover">Register</button>
 </div>
 </head>
 <body>
