main page updated

--- a/cards_test/cards.html
+++ b/cards_test/cards.html
@@ -42,7 +42,7 @@
             </a>
 
             <a class="card" href="#">
-                <div class="background" style="background-image: url(./Portfolio.jpg);"></div>
+                <div class="background" style="background-image: url(./Po.png);"></div>
                 <div class="content">
                     <p class="category">Category</p>
                     <h2 class="heading">Portfolio</h2>
@@ -50,10 +50,10 @@
             </a>
 
             <a class="card" href="#">
-                <div class="background" style="background-image: url(./el1.png);"></div>
+                <div class="background" style="background-image: url(./e1.jpg);"></div>
                 <div class="content">
-                    <p class="category">Category</p>
-                    <h2 class="heading">E-Learning</h2>
+                    <p class="category" >Category</p>
+                    <h2 class="heading" id="elearning">E-Learning</h2>
                 </div>
             </a>
 
