--- a/cards_test/cards.html
+++ b/cards_test/cards.html
@@ -28,15 +28,15 @@
             <a class="card" href="#">
                 <div class="background" style="background-image: url(./smoothie.jpg);"></div>
                 <div class="content">
-                    <p class="category">Category</p>
-                    <h2 class="heading">Health</h2>
+                    <!-- <p class="category">Category</p> -->
+                    <h2 class="heading">Food</h2>
                 </div>
             </a>
 
             <a class="card" href="#">
                 <div class="background" style="background-image: url(./COVERMusic.png);"></div>
                 <div class="content">
-                    <p class="category">Category</p>
+                    <!-- <p class="category">Category</p> -->
                     <h2 class="heading">Music</h2>
                 </div>
             </a>
@@ -44,7 +44,7 @@
             <a class="card" href="#">
                 <div class="background" style="background-image: url(./Po.png);"></div>
                 <div class="content">
-                    <p class="category">Category</p>
+                    <!-- <p class="category">Category</p> -->
                     <h2 class="heading">Portfolio</h2>
                 </div>
             </a>
@@ -52,7 +52,7 @@
             <a class="card" href="#">
                 <div class="background" style="background-image: url(./e1.jpg);"></div>
                 <div class="content">
-                    <p class="category" >Category</p>
+                    <!-- <p class="category" >Category</p> -->
                     <h2 class="heading" id="elearning">E-Learning</h2>
                 </div>
             </a>
@@ -60,16 +60,16 @@
             <a class="card" href="#">
                 <div class="background" style="background-image: url(./sresearch.jpg);"></div>
                 <div class="content">
-                    <p class="category">Category</p>
-                    <h2 class="heading">Research Premoter</h2>
+                    <!-- <p class="category">Category</p> -->
+                    <h2 class="heading"id="research" >Research Premoter</h2>
                 </div>
             </a>
 
             <a class="card" href="#">
                 <div class="background" style="background-image: url(./d.jpg);"></div>
                 <div class="content">
-                    <p class="category">Category</p>
-                    <h2 class="heading">Database managment</h2>
+                    <!-- <p class="category">Category</p> -->
+                    <h2 class="heading" id="data">Database managment</h2>
                 </div>
             </a>
         </div>
