main page updated (html) name

--- a/contact.html
+++ b/contact.html
@@ -13,8 +13,8 @@
 <link rel="stylesheet" type="text/css" href="contact.css" />
 <div class="topnav">
 
-  <a class="active" href="/index.html">HOME</a>
-  <a href="/contact.html">CONTACT</a>
+  <a  href="/cards_test/index(main_page).html">HOME</a>
+  <a class="active" href="/contact.html">CONTACT</a>
   <a href="">ABOUT</a>
   <a href="#news">NEWS</a>
   <!-- <button class="signin">Sign In</button> -->
