--- a/spare_index.html
+++ b/spare_index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -17,7 +17,7 @@
   <a href="/contact.html">CONTACT</a>
   <a href="">ABOUT</a>
   <a href="#news">NEWS</a>
-  <!-- <button class="signin">Sign In</button> -->
+  
   <button class="glow-on-hover" type="button">Sign In</button>
   <button class="glow-on-hover">Register</button>
 </div>
@@ -33,4 +33,4 @@
 <button class="btn4">E-Learnings</button>
 <button class="btn5">Research</button>
 </body>
-</html>
+</html> -->
