--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
   <a class="active" href="/contact.html">CONTACT</a>
   <a href="">ABOUT</a>
   <a href="#news">NEWS</a>
+  <a href="/comingsoon.html">COMING SOON</a>
   <!-- <button class="signin">Sign In</button> -->
   <button class="glow-on-hover" type="button">Sign In</button>
   <button class="glow-on-hover">Register</button>
