--- a/cards_test/index.html
+++ b/cards_test/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="cards.css">
+    <link rel="stylesheet" type="text/css" href="/cards_test/index.css">
     <link rel="stylesheet" type="text/css" href="/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,6 +17,7 @@
   <a href="/contact.html">CONTACT</a>
   <a href="">ABOUT</a>
   <a href="#news">NEWS</a>
+  <a href="/comingsoon.html">COMING SOON</a>
   <!-- <button class="signin">Sign In</button> -->
   <button class="glow-on-hover" type="button">Sign In</button>
   <button class="glow-on-hover">Register</button>
