--- a/cards_test/index.html
+++ b/cards_test/index.html
@@ -13,7 +13,7 @@
 
 <div class="topnav">
 
-  <a class="active" href="/cards_test/index(main_page).html">HOME</a>
+  <a class="active" href="/cards_test/index.html">HOME</a>
   <a href="/contact.html">CONTACT</a>
   <a href="">ABOUT</a>
   <a href="#news">NEWS</a>
