--- a/comingsoon.html
+++ b/comingsoon.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" type="text/css" href="contact.css" />
 <div class="topnav">
 
-  <a  href="/cards_test/index(main_page).html">HOME</a>
+  <a  href="/cards_test/index.html">HOME</a>
   <a  href="/contact.html">CONTACT</a>
   <a href="">ABOUT</a>
   <a href="">NEWS</a>
@@ -29,7 +29,7 @@
   <section class="zero">
     <div class="card-grid">
         <a class="card" href="#">
-            <div class="background" style="background-image: url(./smoothie.jpg);"></div>
+            <div class="background" style="background-image: url(/cards_test/673921.jpg);"></div>
             <div class="content">
                 <!-- <p class="category">Category</p> -->
                 <h2 class="heading">Food</h2>
