--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" type="text/css" href="contact.css" />
 <div class="topnav">
 
-  <a  href="/cards_test/index(main_page).html">HOME</a>
+  <a  href="/cards_test/index.html">HOME</a>
   <a class="active" href="/contact.html">CONTACT</a>
   <a href="">ABOUT</a>
   <a href="#news">NEWS</a>
