image folder added

--- a/comingsoon.html
+++ b/comingsoon.html
@@ -29,7 +29,7 @@
   <section class="zero">
     <div class="card-grid">
         <a class="card" href="#">
-            <div class="background" style="background-image: url(/cards_test/673921.jpg);"></div>
+            <div class="background" style="background-image: url(/Images/673921.jpg);"></div>
             <div class="content">
                 <!-- <p class="category">Category</p> -->
                 <h2 class="heading">Food</h2>
