--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
       <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 card-container">
         <div class="card">
           <div class="team-image-wrapper">
-            <img class="team-member-image" src="/Abdul's1.jpg">
+            <img class="team-member-image" src="/Images/Abdul's1.jpg">
           </div>
           <p class="text-blk name">
             Abdullah Tayeh
@@ -46,7 +46,7 @@
           </p>
           <div class="social-icons">
             <a href="https://abdullahtayeh.co.uk" target="_blank"> 
-              <img class="social-icons" src="/star.jpg">
+              <img class="social-icons" src="/Images/star.jpg">
               </a>
             
             <a href="https://api.whatsapp.com/send?phone=7868205882" target="_blank">
@@ -62,7 +62,7 @@
       <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 card-container">
         <div class="card">
           <div class="team-image-wrapper">
-            <img class="team-member-image" src="/B.jpeg">
+            <img class="team-member-image" src="/Images/B.jpeg">
           </div>
           <p class="text-blk name">
             Blain Noone
@@ -83,7 +83,7 @@
       <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 card-container">
         <div class="card">
           <div class="team-image-wrapper">
-            <img class="team-member-image" src="/F.jpeg">
+            <img class="team-member-image" src="/Images/F.jpeg">
           </div>
           <p class="text-blk name">
             Farida Umarova
@@ -104,7 +104,7 @@
       <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 card-container">
         <div class="card">
           <div class="team-image-wrapper">
-            <img class="team-member-image" src="/r1.jpeg">
+            <img class="team-member-image" src="/Images/r1.jpeg">
           </div>
           <p class="text-blk name">
             Ray
@@ -125,7 +125,7 @@
       <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 card-container">
         <div class="card">
           <div class="team-image-wrapper">
-            <img class="team-member-image" src="/w1.jpeg">
+            <img class="team-member-image" src="/Images/w1.jpeg">
           </div>
           <p class="text-blk name">
             Wilma T
@@ -147,7 +147,7 @@
       <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 card-container">
         <div class="card">
           <div class="team-image-wrapper">
-            <img class="team-member-image" src="/v.jpeg">
+            <img class="team-member-image" src="/Images/v.jpeg">
           </div>
           <p class="text-blk name">
             Vadym Burmetskyi
