--- a/cards_test/index.html
+++ b/cards_test/index.html
@@ -27,7 +27,7 @@
     <section class="hero">
         <div class="card-grid">
             <a class="card" href="#">
-                <div class="background" style="background-image: url(./smoothie.jpg);"></div>
+                <div class="background" style="background-image: url(/Images/smoothie.jpg);"></div>
                 <div class="content">
                     <!-- <p class="category">Category</p> -->
                     <h2 class="heading">Food</h2>
@@ -35,7 +35,7 @@
             </a>
 
             <a class="card" href="#">
-                <div class="background" style="background-image: url(./COVERMusic.png);"></div>
+                <div class="background" style="background-image: url(/Images/COVERMusic.png);"></div>
                 <div class="content">
                     <!-- <p class="category">Category</p> -->
                     <h2 class="heading">Music</h2>
@@ -43,7 +43,7 @@
             </a>
 
             <a class="card" href="#">
-                <div class="background" style="background-image: url(./Po.png);"></div>
+                <div class="background" style="background-image: url(/Images/Po.png);"></div>
                 <div class="content">
                     <!-- <p class="category">Category</p> -->
                     <h2 class="heading">Portfolio</h2>
@@ -51,7 +51,7 @@
             </a>
 
             <a class="card" href="#">
-                <div class="background" style="background-image: url(./e1.jpg);"></div>
+                <div class="background" style="background-image: url(/Images/e1.jpg);"></div>
                 <div class="content">
                     <!-- <p class="category" >Category</p> -->
                     <h2 class="heading" id="elearning">E-Learning</h2>
@@ -59,7 +59,7 @@
             </a>
 
             <a class="card" href="#">
-                <div class="background" style="background-image: url(./sresearch.jpg);"></div>
+                <div class="background" style="background-image: url(/Images/sresearch.jpg);"></div>
                 <div class="content">
                     <!-- <p class="category">Category</p> -->
                     <h2 class="heading"id="research" >Research Premoter</h2>
@@ -67,7 +67,7 @@
             </a>
 
             <a class="card" href="#">
-                <div class="background" style="background-image: url(./d.jpg);"></div>
+                <div class="background" style="background-image: url(/Images/d.jpg);"></div>
                 <div class="content">
                     <!-- <p class="category">Category</p> -->
                     <h2 class="heading" id="data">Database managment</h2>
