--- a/cards_test/index.html
+++ b/cards_test/index.html
@@ -35,7 +35,7 @@
             </a>
 
             <a class="card" href="#">
-                <div class="background" style="background-image: url(Images/guitar.jpg);"></div>
+                <div class="background" style="background-image: url(/Images/guitar2.jpg);"></div>
                 <div class="content">
                     <!-- <p class="category">Category</p> -->
                     <h2 class="heading">Music</h2>
