--- a/comingsoon.html
+++ b/comingsoon.html
@@ -29,10 +29,11 @@
   <section class="zero">
     <div class="card-grid">
         <a class="card" href="#">
-            <div class="background" style="background-image: url(/Images/673921.jpg);"></div>
+            
             <div class="content">
+              <img src="Images/673921.jpg">
                 <!-- <p class="category">Category</p> -->
-                <h2 class="heading">Food</h2>
+                
             </div>
         </a>
 </body>
