--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/cards_test/index.css">
+    <link rel="stylesheet" type="text/css" href="/styles.css">
     <link rel="stylesheet" type="text/css" href="/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +13,7 @@
 
 <div class="topnav">
 
-  <a class="active" href="/cards_test/index.html">HOME</a>
+  <a class="active" href="/index.html">HOME</a>
   <a href="/contact.html">CONTACT</a>
   <a href="">ABOUT</a>
   <a href="#news">NEWS</a>
