added some icons and news page

--- a/news.html
+++ b/news.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Londrina+Solid&display=swap" rel="stylesheet">
 </head>
 
+<h1>THIS IS THE NEWS PAGE AND THIS IS A PLACEHOLDER :)</h1>
 <div class="topnav">
 
   <a class="active" href="/index.html">HOME</a>
