--- a/contact.html
+++ b/contact.html
@@ -13,10 +13,10 @@
 <link rel="stylesheet" type="text/css" href="contact.css" />
 <div class="topnav">
 
-  <a  href="/cards_test/index.html">HOME</a>
+  <a  href="/index.html">HOME</a>
   <a class="active" href="/contact.html">CONTACT</a>
-  <a href="">ABOUT</a>
-  <a href="#news">NEWS</a>
+  <a href="/about.html">ABOUT</a>
+  <a href="/news.html">NEWS</a>
   <a href="/comingsoon.html">COMING SOON</a>
   <!-- <button class="signin">Sign In</button> -->
   <button class="glow-on-hover" type="button">Sign In</button>
@@ -71,12 +71,13 @@
             CEO
           </p>
           <p class="text-blk feature-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            This is some Text. Hi Everyone :)
           </p>
           <div class="social-icons">
-            <a href="https://www.facebook.com" target="_blank">
-              <img class="social-icons" src="https://static-00.iconduck.com/assets.00/linkedin-icon-1024x1024-z5dvl47c.png">
-              </a>
+            <a href="https://www.facebook.com/Blain.Noone" class="fa fa-facebook"></a>
+            <a href="https://www.linkedin.com/in/blain-noone-03177622b/" class="fa fa-linkedin"></a>
+            <a href="https://www.instagram.com/zinxvalkyria/?hl=en" class="fa fa-instagram"></a>
+            <a href="https://github.com/ZinxValkyria" class="fa fa-github"></a>
           </div>
         </div>
       </div>
