--- a/comingsoon.html
+++ b/comingsoon.html
@@ -10,7 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Londrina+Solid&display=swap" rel="stylesheet">
 
-<link rel="stylesheet" type="text/css" href="contact.css" />
+<link rel="stylesheet" type="text/css" href="comingsoon.css" />
+<link rel="stylesheet" type="text/css" href="index.css" />
 <div class="topnav">
 
   <a  href="/cards_test/index.html">HOME</a>
@@ -24,3 +25,4 @@
 </div>
 
 </head>
+<img src="/Images/wallpaperflare.com_wallpaper.jpg" alt="Paris" class="center">
