--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <a class="active" href="/index.html">HOME</a>
   <a href="/contact.html">CONTACT</a>
   <a href="">ABOUT</a>
-  <a href="#news">NEWS</a>
+  <a href="/news.html">NEWS</a>
   <a href="/comingsoon.html">COMING SOON</a>
   <!-- <button class="signin">Sign In</button> -->
   <button class="glow-on-hover" type="button">Sign In</button>
