--- a/news.html
+++ b/news.html
@@ -1,80 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/styles.css">
-    <link rel="stylesheet" type="text/css" href="/index.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Londrina+Solid&display=swap" rel="stylesheet">
-</head>
-
-<h1>THIS IS THE NEWS PAGE AND THIS IS A PLACEHOLDER :)</h1>
-<div class="topnav">
-
-  <a class="active" href="/index.html">HOME</a>
-  <a href="/contact.html">CONTACT</a>
-  <a href="">ABOUT</a>
-  <a href="#news">NEWS</a>
-  <a href="/comingsoon.html">COMING SOON</a>
-  <!-- <button class="signin">Sign In</button> -->
-  <button class="glow-on-hover" type="button">Sign In</button>
-  <button class="glow-on-hover">Register</button>
-</div>
-</head>
-<body>
-    <section class="hero">
-        <div class="card-grid">
-            <a class="card" href="#">
-                <div class="background" style="background-image: url(/Images/smoothie.jpg);" ></div>
-                <div class="content">
-                    <!-- <p class="category">Category</p> -->
-                    <h2 class="heading">Food</h2>
-                </div>
-            </a>
-
-            <a class="card" href="https://zinxvalkyria.space">
-                <div class="background" style="background-image: url(/Images/guitar2.jpg);"></div>
-                <div class="content">
-                    <!-- <p class="category">Category</p> -->
-                    <h2 class="heading">Music</h2>
-                </div>
-            </a>
-
-            <a class="card" href="#">
-                <div class="background" style="background-image: url(/Images/Po.png);"></div>
-                <div class="content">
-                    <!-- <p class="category">Category</p> -->
-                    <h2 class="heading">Portfolio</h2>
-                </div>
-            </a>
-
-            <a class="card" href="#">
-                <div class="background" style="background-image: url(/Images/e1.jpg);"></div>
-                <div class="content">
-                    <!-- <p class="category" >Category</p> -->
-                    <h2 class="heading" id="elearning">E-Learning</h2>
-                </div>
-            </a>
-
-            <a class="card" href="#">
-                <div class="background" style="background-image: url(/Images/sresearch.jpg);"></div>
-                <div class="content">
-                    <!-- <p class="category">Category</p> -->
-                    <h2 class="heading"id="research" >Research Premoter</h2>
-                </div>
-            </a>
-
-            <a class="card" href="#">
-                <div class="background" style="background-image: url(/Images/d.jpg);"></div>
-                <div class="content">
-                    <!-- <p class="category">Category</p> -->
-                    <h2 class="heading" id="data">Database managment</h2>
-                </div>
-            </a>
-        </div>
-    </section>
-</body>
-</html>
+<h1>News Page Placeholder</h1>>
