--- a/comingsoon.html
+++ b/comingsoon.html
@@ -25,4 +25,8 @@
 </div>
 
 </head>
+<body>
 <img src="/Images/wallpaperflare.com_wallpaper.jpg" alt="Paris" class="center">
+<p class="paragraph">Coming soon</p>
+
+</body>
