--- a/comingsoon.html
+++ b/comingsoon.html
@@ -1,32 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   
     <title>Self Development</title>
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Londrina+Solid&display=swap" rel="stylesheet">
-
+  
 <link rel="stylesheet" type="text/css" href="comingsoon.css" />
 <link rel="stylesheet" type="text/css" href="index.css" />
-<div class="topnav">
+<!-- <div class="topnav">
 
-  <a  href="/cards_test/index.html">HOME</a>
-  <a  href="/contact.html">CONTACT</a>
+  <a href="/cards_test/index.html">HOME</a>
+  <a href="/contact.html">CONTACT</a>
   <a href="">ABOUT</a>
-  <a href="">NEWS</a>
+  <a href="">News</a>
   <a class="active" href="/comingsoon.html">COMING SOON</a>
-  <!-- <button class="signin">Sign In</button> -->
+
   <button class="glow-on-hover" type="button">Sign In</button>
   <button class="glow-on-hover">Register</button>
-</div>
-
+</div> -->
 </head>
 <body>
-<img src="/Images/wallpaperflare.com_wallpaper.jpg" alt="Paris" class="center">
-
-
+  <div class="container">
+    <div class="card">
+      <div class="lines"></div>
+        <div class="imgBx">
+          <img src="/Images/wallpaperflare.com_wallpaper.jpg"></div>
+          <div class="content">
+            <div class="details">
+              <h2>Design </h2>
+            </div>
+          </div>
+        
+      
+    </div>
+  </div>
 </body>
+</html>
