coming soon page update

--- a/about.html
+++ b/about.html
@@ -33,11 +33,12 @@
   </style>
   <div class="topnav">
 
-    <a class="active" href="https://protect-eu.mimecast.com/s/ARZcCVmXnFx1qQkZtGaxqb">HOME</a>
-    <a href="https://protect-eu.mimecast.com/s/J9x3CWnYoc5vroX4fxfA-C">CONTACT</a>
-    <a href="">ABOUT</a>
-    <a href="https://protect-eu.mimecast.com/s/RGHVCX6ZpuX3ErD9tD4ZvS">NEWS</a>
-    <a href="https://protect-eu.mimecast.com/s/MOXiCY61quLPVBp9HVlxxh">COMING SOON</a>
+    <a  href="/cards_test/index.html">HOME</a>
+    <a href="/contact.html">CONTACT</a>
+    <a class="active" href="about.html">ABOUT</a>
+
+    <a href="/news.html">NEWS</a>
+    <a class="active" href="/comingsoon.html">COMING SOON</a>
     <!-- <button class="signin">Sign In</button> -->
     <button class="glow-on-hover" type="button">Sign In</button>
     <button class="glow-on-hover">Register</button>
