--- a/comingsoon.html
+++ b/comingsoon.html
@@ -6,22 +6,21 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  
+    <link href="https://fonts.googleapis.com/css2?family=Londrina+Solid&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="style.css" />
 <link rel="stylesheet" type="text/css" href="comingsoon.css" />
 <div class="topnav">
 
     <a href="/cards_test/index.html">HOME</a>
     <a href="/contact.html">CONTACT</a>
-    <a href="">ABOUT</a>
-    <a href="/news.html">News</a>
+    <a href="/about.html">ABOUT</a>
+    <a href="/news.html">NEWS</a>
     <a class="active" href="/comingsoon.html">COMING SOON</a>
-  
     <button class="glow-on-hover" type="button">Sign In</button>
     <button class="glow-on-hover">Register</button>
   </div>
 </head>
-<main>
+<main >
     <div class="container">
         <div class="card">
           <div class="lines"></div>
