login page and register page added hyper links

--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
   <a href="/news.html">NEWS</a>
   <a href="/comingsoon.html">COMING SOON</a>
   <!-- <button class="signin">Sign In</button> -->
-  <button class="glow-on-hover" type="button">Sign In</button>
-  <button class="glow-on-hover">Register</button>
+  <!-- <button class="glow-on-hover" type="button">Sign In</button> -->
+  <!-- <button onclick = 'www.yoursite.com' class="glow-on-hover">Register</button> -->
+  <button onclick="location.href='/login-register-buttons.html'" class="glow-on-hover" type="button">Register</button>
+  <button onclick="location.href='/login-register-buttons.html'" class="glow-on-hover" type="button">Log In</button>
+  
 </div>
 </head>
 <body>
