--- a/comingsoon.html
+++ b/comingsoon.html
@@ -16,8 +16,9 @@
     <a href="/about.html">ABOUT</a>
     <a href="/news.html">NEWS</a>
     <a class="active" href="/comingsoon.html">COMING SOON</a>
-    <button class="glow-on-hover" type="button">Sign In</button>
-    <button class="glow-on-hover">Register</button>
+    <button onclick="location.href='/login-register-buttons.html'" class="glow-on-hover" type="button">Register</button>
+    <button onclick="location.href='/login-register-buttons.html'" class="glow-on-hover" type="button">Log In</button>
+    
   </div>
 </head>
 <main >
