--- a/login-register-buttons.html
+++ b/login-register-buttons.html
@@ -20,9 +20,9 @@
                 <div class="form__input-error-message"></div>
             </div>
             <button class="form__button" type="submit">Continue</button>
-            <p class="form__text">
+            <!-- <p class="form__text">
                 <a href="#" class="form__link">Forgot your password?</a>
-            </p>
+            </p> -->
             <p class="form__text">
                 <a class="form__link" href="./" id="linkCreateAccount">Don't have an account? Create account</a>
             </p>
