--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,28 +10,35 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Londrina+Solid&display=swap" rel="stylesheet">
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+
+
+
 </head>
 
 <div class="topnav">
 
-  <a class="active" href="/index.html">HOME</a>
-  <a href="/contact.html">CONTACT</a>
-  <a href="">ABOUT</a>
-  <a href="/news.html">NEWS</a>
-  <a href="/comingsoon.html">COMING SOON</a>
-  <!-- <button class="signin">Sign In</button> -->
-  <!-- <button class="glow-on-hover" type="button">Sign In</button> -->
-  <!-- <button onclick = 'www.yoursite.com' class="glow-on-hover">Register</button> -->
-  <button onclick="location.href='/login-register-buttons.html'" class="glow-on-hover" type="button">Register</button>
-  <button onclick="location.href='/login-register-buttons.html'" class="glow-on-hover" type="button">Log In</button>
-  
+    <a class="active" href="/index.html">HOME</a>
+    <a href="/contact.html">CONTACT</a>
+    <a href="">ABOUT</a>
+    <a href="/news.html">NEWS</a>
+    <a href="/comingsoon.html">COMING SOON</a>
+    
+    <!-- <button class="signin">Sign In</button> -->
+    <!-- <button class="glow-on-hover" type="button">Sign In</button> -->
+    <!-- <button onclick = 'www.yoursite.com' class="glow-on-hover">Register</button> -->
+    <button onclick="location.href='/login-register-buttons.html'" class="glow-on-hover" type="button">Register</button>
+    <button onclick="location.href='/login-register-buttons.html'" class="glow-on-hover" type="button">Log In</button>
+
 </div>
 </head>
+
 <body>
     <section class="hero">
         <div class="card-grid">
             <a class="card" href="#">
-                <div class="background" style="background-image: url(/Images/smoothie.jpg);" ></div>
+                <div class="background" style="background-image: url(/Images/smoothie.jpg);"></div>
                 <div class="content">
                     <!-- <p class="category">Category</p> -->
                     <h2 class="heading">Food</h2>
@@ -65,7 +73,7 @@
                 <div class="background" style="background-image: url(/Images/sresearch.jpg);"></div>
                 <div class="content">
                     <!-- <p class="category">Category</p> -->
-                    <h2 class="heading"id="research" >Research Premoter</h2>
+                    <h2 class="heading" id="research">Research Premoter</h2>
                 </div>
             </a>
 
@@ -77,6 +85,34 @@
                 </div>
             </a>
         </div>
+
     </section>
+
+    <div class="chatbot-container" id="containerid">
+        <div id="header">
+            <h1>Chatbot</h1>
+        </div>
+        <div id="chatbot">
+            <div id="conversation">
+                <div class="chatbot-message">
+                    <p class="chatbot-text">Hola!! 👋 Great to see you. Type sales or services for contact details</p>
+                </div>
+            </div>
+            <form id="input-form">
+                <message-container>
+                    <input id="input-field" type="text" placeholder="Type your message here">
+                    <button id="submit-button" type="submit">
+                        send
+                    </button>
+                </message-container>
+
+            </form>
+        </div>
+
+    </div>
+    <button id="fold-unfold" onclick="toggleContent()">Let's chat!</button>
+
+    <script src="index.js" type="text/babel"></script>
 </body>
+
 </html>
