removed card_test and changed other file paths

--- a/comingsoon.html
+++ b/comingsoon.html
@@ -11,11 +11,11 @@
 <link rel="stylesheet" type="text/css" href="comingsoon.css" />
 <div class="topnav">
 
-    <a href="/cards_test/index.html">HOME</a>
-    <a href="/contact.html">CONTACT</a>
-    <a href="/about.html">ABOUT</a>
-    <a href="/news.html">NEWS</a>
-    <a class="active" href="/comingsoon.html">COMING SOON</a>
+    <a href="./cards_test/index.html">HOME</a>
+    <a href="./contact.html">CONTACT</a>
+    <a href="./about.html">ABOUT</a>
+    <a href="./news.html">NEWS</a>
+    <a class="active" href="./comingsoon.html">COMING SOON</a>
     <button onclick="location.href='/login-register-buttons.html'" class="glow-on-hover" type="button">Register</button>
     <button onclick="location.href='/login-register-buttons.html'" class="glow-on-hover" type="button">Log In</button>
     
