--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <!-- <button class="signin">Sign In</button> -->
     <!-- <button class="glow-on-hover" type="button">Sign In</button> -->
     <!-- <button onclick = 'www.yoursite.com' class="glow-on-hover">Register</button> -->
-    <button onclick="location.href='/login-register-buttons.html'" class="glow-on-hover" type="button">Register</button>
-    <button onclick="location.href='/login-register-buttons.html'" class="glow-on-hover" type="button">Log In</button>
+    <button onclick="location.href='./login-register-buttons.html'" class="glow-on-hover" type="button">Register</button>
+    <button onclick="location.href='./login-register-buttons.html'" class="glow-on-hover" type="button">Log In</button>
 
 </div>
 </head>
