--- a/about.html
+++ b/about.html
@@ -33,12 +33,12 @@
   </style>
   <div class="topnav">
 
-    <a  href="/cards_test/index.html">HOME</a>
-    <a href="/contact.html">CONTACT</a>
+    <a  href="./cards_test/index.html">HOME</a>
+    <a href="./contact.html">CONTACT</a>
     <a class="active" href="about.html">ABOUT</a>
 
-    <a href="/news.html">NEWS</a>
-    <a class="active" href="/comingsoon.html">COMING SOON</a>
+    <a href="./news.html">NEWS</a>
+    <a class="active" href="./comingsoon.html">COMING SOON</a>
     <!-- <button class="signin">Sign In</button> -->
     <button class="glow-on-hover" type="button">Sign In</button>
     <button class="glow-on-hover">Register</button>
