--- a/contact.html
+++ b/contact.html
@@ -14,14 +14,14 @@
 <link rel="stylesheet" type="text/css" href="contact.css" />
 <div class="topnav">
 
-  <a  href="/index.html">HOME</a>
-  <a class="active" href="/contact.html">CONTACT</a>
-  <a href="/about.html">ABOUT</a>
-  <a href="/news.html">NEWS</a>
-  <a href="/comingsoon.html">COMING SOON</a>
+  <a  href="./index.html">HOME</a>
+  <a class="active" href="./contact.html">CONTACT</a>
+  <a href="./about.html">ABOUT</a>
+  <a href="./news.html">NEWS</a>
+  <a href="./comingsoon.html">COMING SOON</a>
   <!-- <button class="signin">Sign In</button> -->
-  <button onclick="location.href='/login-register-buttons.html'" class="glow-on-hover" type="button">Register</button>
-  <button onclick="location.href='/login-register-buttons.html'" class="glow-on-hover" type="button">Log In</button>
+  <button onclick="location.href='./login-register-buttons.html'" class="glow-on-hover" type="button">Register</button>
+  <button onclick="location.href='./login-register-buttons.html'" class="glow-on-hover" type="button">Log In</button>
   
 </div>
 
@@ -35,7 +35,7 @@
       <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 card-container">
         <div class="card">
           <div class="team-image-wrapper">
-            <img class="team-member-image" src="/Images/Abdul's1.jpg">
+            <img class="team-member-image" src="./Images/Abdul's1.jpg">
           </div>
           <p class="text-blk name">
             Abdullah Tayeh
@@ -48,7 +48,7 @@
           </p>
           <div class="social-icons">
             <a href="https://abdullahtayeh.co.uk" target="_blank"> 
-              <img class="social-icons" src="/Images/star.jpg">
+              <img class="social-icons" src="./Images/star.jpg">
               </a>
             
             <a href="https://api.whatsapp.com/send?phone=7868205882" target="_blank">
@@ -64,7 +64,7 @@
       <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 card-container">
         <div class="card">
           <div class="team-image-wrapper">
-            <img class="team-member-image" src="/Images/B.jpeg">
+            <img class="team-member-image" src="./Images/B.jpeg">
           </div>
           <p class="text-blk name">
             Blain Noone
@@ -86,7 +86,7 @@
       <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 card-container">
         <div class="card">
           <div class="team-image-wrapper">
-            <img class="team-member-image" src="/Images/F.jpeg">
+            <img class="team-member-image" src="./Images/F.jpeg">
           </div>
           <p class="text-blk name">
             Farida Umarova
@@ -107,7 +107,7 @@
       <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 card-container">
         <div class="card">
           <div class="team-image-wrapper">
-            <img class="team-member-image" src="/Images/r1.jpeg">
+            <img class="team-member-image" src="./Images/r1.jpeg">
           </div>
           <p class="text-blk name">
             Ray
@@ -128,7 +128,7 @@
       <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 card-container">
         <div class="card">
           <div class="team-image-wrapper">
-            <img class="team-member-image" src="/Images/w1.jpeg">
+            <img class="team-member-image" src="./Images/w1.jpeg">
           </div>
           <p class="text-blk name">
             Wilma T
@@ -150,7 +150,7 @@
       <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 card-container">
         <div class="card">
           <div class="team-image-wrapper">
-            <img class="team-member-image" src="/Images/v.jpeg">
+            <img class="team-member-image" src="./Images/v.jpeg">
           </div>
           <p class="text-blk name">
             Vadym Burmetskyi
