Links to card_test removed
replaced with the file path to the home page

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
   </style>
   <div class="topnav">
 
-    <a  href="./cards_test/index.html">HOME</a>
+    <a  href="./index.html">HOME</a>
     <a href="./contact.html">CONTACT</a>
     <a class="active" href="about.html">ABOUT</a>
 
