--- a/comingsoon.html
+++ b/comingsoon.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" type="text/css" href="comingsoon.css" />
 <div class="topnav">
 
-    <a href="./cards_test/index.html">HOME</a>
+    <a href="./index.html">HOME</a>
     <a href="./contact.html">CONTACT</a>
     <a href="./about.html">ABOUT</a>
     <a href="./news.html">NEWS</a>
