--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
     <button id="fold-unfold" onclick="toggleContent()">Let's chat!</button>
 
     <script src="index.js" type="text/babel"></script>
+    <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
 </body>
 
 </html>
