Revert "added files"
This reverts commit 7b62a6a79fee31c1721bfe22c9983334a0ad481f.

--- a/login-register-buttons.html
+++ b/login-register-buttons.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Login / Sign Up Form</title>
     <link rel="shortcut icon" href="./assets/favicon.ico">
-    <link rel="stylesheet" href="./login-libs/css/login-register-buttons.css">
+    <link rel="stylesheet" href="./login-register-buttons.css">
 </head>
 <body>
     <div class="container">
@@ -52,6 +52,5 @@
             </p>
         </form>
     </div>
-    <script src="/login-libs/js/login.js" type="text/babel"></script>
-    <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+    <script src="index.js"></script>
 </body>
