--- a/contact.html
+++ b/contact.html
@@ -76,10 +76,17 @@
             This is some Text. Hi Everyone :)
           </p>
           <div class="social-icons">
-            <a href="https://www.facebook.com/Blain.Noone" class="fa fa-facebook"></a>
-            <a href="https://www.linkedin.com/in/blain-noone-03177622b/" class="fa fa-linkedin"></a>
-            <a href="https://www.instagram.com/zinxvalkyria/?hl=en" class="fa fa-instagram"></a>
-            <a href="https://github.com/ZinxValkyria" class="fa fa-github"></a>
+            <a href="https://zinxvalkyria.space" target="_blank"> 
+              <img class="social-icons" src="./Images/star.jpg">
+              </a>
+            
+            <a href="https://api.whatsapp.com/send?phone=7919865462" target="_blank">
+              <img class="social-icons" src="https://png.pngtree.com/png-vector/20230225/ourmid/pngtree-whatsapp-icon-social-media-png-image_6618452.png">
+              </a>
+            <a href="https://www.linkedin.com/in/blain-noone-03177622b/" target="_blank">
+              <img class="social-icons" src="https://static-00.iconduck.com/assets.00/linkedin-icon-1024x1024-z5dvl47c.png">
+              </a>
+
           </div>
         </div>
       </div>
