--- a/about.html
+++ b/about.html
@@ -47,22 +47,22 @@
 </head>
 <body>
   <div class="container">
-    <h1><center>WHAT WE OFFER</center></h1>
-    <h2><center> Welcome to your one-stop destination for all your coding needs!</center></h2>
+    <h1><center>OUR MISSION</center></h1>
     <br>
-    <p> At Code as a Service, we understand the importance of efficient and reliable code for your projects. Whether you're a startup, an established business, or an individual with a unique idea, our team of expert developers is here to provide you with top-notch code solutions.
-
-We specialize in offering code as a service, which means you can outsource your coding requirements to us while you focus on your core business activities. Our dedicated team of professionals excels in various programming languages and frameworks, ensuring that we can cater to a wide range of projects.
-
-With our extensive experience in web development, mobile app development, and software engineering, we guarantee high-quality code that is scalable, secure, and tailored to your specific needs. Our solutions are designed to optimize performance, enhance user experience, and drive business growth.</p>
-<br>
-<p>We take pride in our commitment to delivering projects on time and within budget. Our transparent and collaborative approach ensures that you're involved in every step of the development process, from initial consultation to final implementation.
-
-Customer satisfaction is our utmost priority. We strive to build long-term relationships with our clients by providing excellent customer support and maintaining open lines of communication.
-
-Whether you need a custom website, a mobile app, or complex software solutions, Code as a Service is your trusted partner. Let us handle the coding while you focus on what you do best – growing your business.
-
-Get in touch with us today to discuss your project requirements and let's turn your ideas into reality with our exceptional code as a service!</p>
+    <p>At Crafty Devs, our mission is to create impactful web experiences that empower businesses to thrive in
+       the digital world. We combine innovative design, user-centric approaches, and cutting-edge technology 
+       to deliver websites that inspire, engage, and drive meaningful results for our clients.</p>
+    <br>
+    <h1><center>WHAT WE DO</center></h1>
+    <br>
+    <p> Welcome to Crafty Devs, your trusted partner for exceptional web design solutions. We are a dynamic
+       team of talented designers dedicated to crafting visually stunning and highly functional websites that 
+       captivate audiences. With our passion for innovation and attention to detail, we deliver bespoke designs 
+       tailored to your unique business needs. Whether you're a startup or an established enterprise, we're here 
+       to elevate your online presence and drive success. Experience the art of web design with Crafty Devs.</p>
+    <br>
+    <p>If you would like to learn more about our services or have any inquiries, please get in touch with us 
+      on<br>0161 875 5739 or at hello@craftydevs.com</p>
   </div>
 </body>
 
