--- a/about.html
+++ b/about.html
@@ -33,16 +33,19 @@
   </style>
   <div class="topnav">
 
-    <a  href="./index.html">HOME</a>
+    <a class="active" href="./index.html">HOME</a>
     <a href="./contact.html">CONTACT</a>
-    <a class="active" href="./about.html">ABOUT</a>
-
+    <a href="">ABOUT</a>
     <a href="./news.html">NEWS</a>
     <a href="./comingsoon.html">COMING SOON</a>
+    
     <!-- <button class="signin">Sign In</button> -->
-    <button class="glow-on-hover" type="button">Sign In</button>
-    <button class="glow-on-hover">Register</button>
-  </div>
+    <!-- <button class="glow-on-hover" type="button">Sign In</button> -->
+    <!-- <button onclick = 'www.yoursite.com' class="glow-on-hover">Register</button> -->
+    <button onclick="location.href='./login-register-buttons.html'" class="glow-on-hover" type="button">Register</button>
+    <button onclick="location.href='./login-register-buttons.html'" class="glow-on-hover" type="button">Log In</button>
+
+</div>
 
 </head>
 <body>
