Changed company name in footer

--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
 </body>
 
 <footer>
-  <p>&copy; 2023 Code as a Service. All rights reserved.</p>
+  <p>&copy; 2023 Crafty Devs. All rights reserved.</p>
 </footer>
 
 </html>
