--- a/about.html
+++ b/about.html
@@ -33,9 +33,9 @@
   </style>
   <div class="topnav">
 
-    <a class="active" href="./index.html">HOME</a>
+    <a href="./index.html">HOME</a>
     <a href="./contact.html">CONTACT</a>
-    <a href="">ABOUT</a>
+    <a class="active" href="">ABOUT</a>
     <a href="./news.html">NEWS</a>
     <a href="./comingsoon.html">COMING SOON</a>
     
