make phone number and email clickable

--- a/about.html
+++ b/about.html
@@ -65,7 +65,8 @@
        to elevate your online presence and drive success. Experience the art of web design with Crafty Devs.</p>
     <br>
     <p>If you would like to learn more about our services or have any inquiries, please get in touch with us 
-      on<br>0161 875 5739 or at hello@craftydevs.com</p>
+      on<br><a href="tel:01618755739" style="color: #72A0C1;">0161 875 5739</a>
+      or at <a href="mailto:hello@craftydevs.com" style="color: #72A0C1;">hello@craftydevs.com</a>.</p>
   </div>
 </body>
 
