--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
 
     <a href="./index.html">HOME</a>
     <a href="./contact.html">CONTACT</a>
-    <a class="active" href="">ABOUT</a>
+    <a class="active" href="./about.html">ABOUT</a>
     <a href="./news.html">NEWS</a>
     <a href="./comingsoon.html">COMING SOON</a>
     
