add link to About page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <a class="active" href="./index.html">HOME</a>
     <a href="./contact.html">CONTACT</a>
-    <a href="">ABOUT</a>
+    <a href="./about.html">ABOUT</a>
     <a href="./news.html">NEWS</a>
     <a href="./comingsoon.html">COMING SOON</a>
     
