fix two typos: promoter and management

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div class="background" style="background-image: url(./Images/sresearch.jpg);"></div>
                 <div class="content">
                     <!-- <p class="category">Category</p> -->
-                    <h2 class="heading" id="research">Research Premoter</h2>
+                    <h2 class="heading" id="research">Research Promoter</h2>
                 </div>
             </a>
 
@@ -81,7 +81,7 @@
                 <div class="background" style="background-image: url(./Images/d.jpg);"></div>
                 <div class="content">
                     <!-- <p class="category">Category</p> -->
-                    <h2 class="heading" id="data">Database managment</h2>
+                    <h2 class="heading" id="data">Database management</h2>
                 </div>
             </a>
         </div>
