--- a/login-register-buttons.html
+++ b/login-register-buttons.html
@@ -1,27 +1,22 @@
 <!DOCTYPE html>
-
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <title>Login / Sign Up Form</title>
     <link rel="shortcut icon" href="./assets/favicon.ico">
-    <link rel="stylesheet" href="./libs/css/login-register-buttons.css">
+    <link rel="stylesheet" href="./login-register-buttons.css">
 </head>
-
 <body>
     <div class="container">
-        <form action="login.php" class="form" id="login">
+        <form class="form" id="login">
             <h1 class="form__title">Login</h1>
-            <?php if (isset($_GET['error'])) { ?>
-                <p class="error"><?php echo $_GET['error']; ?></p>
-            <?php } ?>
             <div class="form__message form__message--error"></div>
             <div class="form__input-group">
-                <input type="text" id="uname" name="uname" class="form__input" autofocus placeholder="Username">
+                <input type="text" class="form__input" autofocus placeholder="Username or email">
                 <div class="form__input-error-message"></div>
             </div>
             <div class="form__input-group">
-                <input type="password" id="password" name="password" class="form__input" autofocus placeholder="Password">
+                <input type="password" class="form__input" autofocus placeholder="Password">
                 <div class="form__input-error-message"></div>
             </div>
             <button class="form__button" type="submit">Continue</button>
@@ -29,7 +24,7 @@
                 <a href="#" class="form__link">Forgot your password?</a>
             </p> -->
             <p class="form__text">
-                <a class="form__link" href="#createAccount" id="linkCreateAccount">Don't have an account? Create account</a>
+                <a class="form__link" href="./" id="linkCreateAccount">Don't have an account? Create account</a>
             </p>
         </form>
         <form class="form form--hidden" id="createAccount">
@@ -40,21 +35,22 @@
                 <div class="form__input-error-message"></div>
             </div>
             <div class="form__input-group">
-                <input type="text" id="signupEmail" class="form__input " autofocus placeholder="Email Address">
+                <input type="text" class="form__input" autofocus placeholder="Email Address">
                 <div class="form__input-error-message"></div>
             </div>
             <div class="form__input-group">
-                <input type="password" id="signupPw" class="form__input" autofocus placeholder="Password">
+                <input type="password" class="form__input" autofocus placeholder="Password">
                 <div class="form__input-error-message"></div>
             </div>
-
+            <div class="form__input-group">
+                <input type="password" class="form__input" autofocus placeholder="Confirm password">
+                <div class="form__input-error-message"></div>
+            </div>
             <button class="form__button" type="submit">Continue</button>
             <p class="form__text">
-                <a class="form__link" href="#login" id="linkLogin">Already have an account? Sign in</a>
+                <a class="form__link" href="./" id="linkLogin">Already have an account? Sign in</a>
             </p>
         </form>
     </div>
-
-    <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
-    <script src="libs/js/index.js"></script>
+    <script src="index.js"></script>
 </body>
