--- a/description.html
+++ b/description.html
@@ -8,6 +8,24 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="./description.css">
+    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" type="text/css" href="./styles.css">
+    
+<div class="topnav">
+
+    <a class="active" href="./index.html">HOME</a>
+    <a href="./contact.html">CONTACT</a>
+    <a href="./about.html">ABOUT</a>
+    <a href="./news.html">NEWS</a>
+    <a href="./comingsoon.html">COMING SOON</a>
+    
+    <!-- <button class="signin">Sign In</button> -->
+    <!-- <button class="glow-on-hover" type="button">Sign In</button> -->
+    <!-- <button onclick = 'www.yoursite.com' class="glow-on-hover">Register</button> -->
+    <button onclick="location.href='./login-register-buttons.html'" class="glow-on-hover" type="button">Register</button>
+    <button onclick="location.href='./login-register-buttons.html'" class="glow-on-hover" type="button">Log In</button>
+
+</div>
 </head>
 
 <body>
@@ -23,12 +41,12 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body">
-                    <div class="row infoMod">
+                <div class="">
+                    <div class=" ">
                         <div class="col-4">
-                            <img src="/images/cdphoto.png" class="modImg">
+                            <img src="/images/cdphoto.png" class=" ">
                         </div>
-                        <div class="col-8 modHead">
+                        <!-- <div class="col-8 modHead">
                             <h4 class="subHead">Project Overview</h4><br>
                             <p>
                                 The Company Directory Website is a user-friendly platform for businesses to store and
@@ -37,7 +55,7 @@
                                 it streamlines data management and enhances efficiency.
                             </p><br>
 
-                        </div>
+                        </div> -->
                     </div>
                     <br>
 
