--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <body>
     <section class="hero">
         <div class="card-grid">
-            <a class="card" href="#">
+            <a class="card" href="./portfolio.html">
                 <div class="background" style="background-image: url(./Images/smoothie.jpg);"></div>
                 <div class="content">
                     <!-- <p class="category">Category</p> -->
