--- a/portfolio.html
+++ b/portfolio.html
@@ -7,25 +7,7 @@
     <title>Project info</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="./description.css">
-    <link rel="stylesheet" href="./index.css">
-    <link rel="stylesheet" type="text/css" href="./styles.css">
-    
-<div class="topnav">
-
-    <a class="active" href="./index.html">HOME</a>
-    <a href="./contact.html">CONTACT</a>
-    <a href="./about.html">ABOUT</a>
-    <a href="./news.html">NEWS</a>
-    <a href="./comingsoon.html">COMING SOON</a>
-    
-    <!-- <button class="signin">Sign In</button> -->
-    <!-- <button class="glow-on-hover" type="button">Sign In</button> -->
-    <!-- <button onclick = 'www.yoursite.com' class="glow-on-hover">Register</button> -->
-    <button onclick="location.href='./login-register-buttons.html'" class="glow-on-hover" type="button">Register</button>
-    <button onclick="location.href='./login-register-buttons.html'" class="glow-on-hover" type="button">Log In</button>
-
-</div>
+    <link rel="stylesheet" href="./portfolio.css">
 </head>
 
 <body>
@@ -36,17 +18,17 @@
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="cdModalLongTitle">Company Directory</h5>
+                    <h5 class="modal-title" id="cdModalLongTitle">Portfolio</h5>
                     <button type="button" class="close modClose" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="">
-                    <div class=" ">
+                <div class="modal-body">
+                    <div class="row infoMod">
                         <div class="col-4">
-                            <img src="/images/cdphoto.png" class=" ">
+                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR7DurYAx20-v41QVU6idfAMiyqVKFqNGjq5-OeSKkHKFMcUJOO-k_2_DWsBuKRdGYBxl4&usqp=CAU" class="modImg">
                         </div>
-                        <!-- <div class="col-8 modHead">
+                        <div class="col-8 modHead">
                             <h4 class="subHead">Project Overview</h4><br>
                             <p>
                                 The Company Directory Website is a user-friendly platform for businesses to store and
@@ -55,7 +37,7 @@
                                 it streamlines data management and enhances efficiency.
                             </p><br>
 
-                        </div> -->
+                        </div>
                     </div>
                     <br>
 
@@ -154,21 +136,21 @@
                         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg"
                             class="iconDiplayImg" />
 
-                        <img src="/images/XAMPP.png" class="iconDiplayImg" />
+                        <img src="libs/img/XAMPP.png" class="iconDiplayImg" />
 
-                        <img src="/images/html-5.png" class="iconDiplayImg" />
+                        <img src="libs/img/html-5.png" class="iconDiplayImg" />
 
-                        <img src="/images/css.png" class="iconDiplayImg" />
+                        <img src="libs/img/css.png" class="iconDiplayImg" />
 
-                        <img src="/images/bootstrap.png" class="iconDiplayImg" />
+                        <img src="libs/img/bootstrap.png" class="iconDiplayImg" />
 
-                        <img src="/images/jquery.png" class="iconDiplayImg" />
+                        <img src="libs/img/jquery.png" class="iconDiplayImg" />
 
-                        <img src="/images/ajax.png" class="iconDiplayImg" />
+                        <img src="libs/img/ajax.png" class="iconDiplayImg" />
 
-                        <img src="/images/php.png" class="iconDiplayImg" />
+                        <img src="libs/img/php.png" class="iconDiplayImg" />
 
-                        <img src="/images/mysql.png" class="iconDiplayImg" />
+                        <img src="libs/img/mysql.png" class="iconDiplayImg" />
 
 
 
