--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
                         <div class="col-8 modHead">
                             <h4 class="subHead">Project Overview</h4><br>
                             <p>
-                                The Company Directory Website is a user-friendly platform for businesses to store and
+                                The Portfolio Website is a user-friendly platform for indiviusals to store and
                                 manage employee information. It provides a centralized hub for crucial employee,
                                 department, and location details. With its intuitive interface and robust functionality,
                                 it streamlines data management and enhances efficiency.
