--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
                 <div class="modal-body">
                     <div class="row infoMod">
                         <div class="col-4">
-                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR7DurYAx20-v41QVU6idfAMiyqVKFqNGjq5-OeSKkHKFMcUJOO-k_2_DWsBuKRdGYBxl4&usqp=CAU" class="modImg">
+                            <img class="images" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR7DurYAx20-v41QVU6idfAMiyqVKFqNGjq5-OeSKkHKFMcUJOO-k_2_DWsBuKRdGYBxl4&usqp=CAU" class="modImg">
                         </div>
                         <div class="col-8 modHead">
                             <h4 class="subHead">Project Overview</h4><br>
@@ -161,21 +161,21 @@
                         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg"
                             class="iconDiplayImg" />
 
-                        <img src="libs/img/XAMPP.png" class="iconDiplayImg" />
+                        <img class="implementedTech" src="images/XAMPP.png" class="iconDiplayImg" />
 
-                        <img src="libs/img/html-5.png" class="iconDiplayImg" />
+                        <img src="images/html-5.png" class="iconDiplayImg" />
 
-                        <img src="libs/img/css.png" class="iconDiplayImg" />
+                        <img src="images/css.png" class="iconDiplayImg" />
 
-                        <img src="libs/img/bootstrap.png" class="iconDiplayImg" />
+                        <img src="images/bootstrap.png" class="iconDiplayImg" />
 
-                        <img src="libs/img/jquery.png" class="iconDiplayImg" />
+                        <img src="images/jquery.png" class="iconDiplayImg" />
 
-                        <img src="libs/img/ajax.png" class="iconDiplayImg" />
+                        <img src="images/ajax.png" class="iconDiplayImg" />
 
-                        <img src="libs/img/php.png" class="iconDiplayImg" />
+                        <img src="images/php.png" class="iconDiplayImg" />
 
-                        <img src="libs/img/mysql.png" class="iconDiplayImg" />
+                        <img src="images/mysql.png" class="iconDiplayImg" />
 
 
 
