--- a/portfolio.html
+++ b/portfolio.html
@@ -158,24 +158,24 @@
 
                     <h4 class="subHead">Implimented Technologies </h4>
                     <div class="iconDiplay">
-                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg"
+                        <img class="implementedTech" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg"
                             class="iconDiplayImg" />
 
                         <img class="implementedTech" src="images/XAMPP.png" class="iconDiplayImg" />
 
-                        <img src="images/html-5.png" class="iconDiplayImg" />
+                        <img class="implementedTech" src="images/html-5.png" class="iconDiplayImg" />
 
-                        <img src="images/css.png" class="iconDiplayImg" />
+                        <img class="implementedTech" src="images/css.png" class="iconDiplayImg" />
 
-                        <img src="images/bootstrap.png" class="iconDiplayImg" />
+                        <img class="implementedTech" src="images/bootstrap.png" class="iconDiplayImg" />
 
-                        <img src="images/jquery.png" class="iconDiplayImg" />
+                        <img class="implementedTech" src="images/jquery.png" class="iconDiplayImg" />
 
-                        <img src="images/ajax.png" class="iconDiplayImg" />
+                        <img class="implementedTech" src="images/ajax.png" class="iconDiplayImg" />
 
-                        <img src="images/php.png" class="iconDiplayImg" />
+                        <img class="implementedTech" src="images/php.png" class="iconDiplayImg" />
 
-                        <img src="images/mysql.png" class="iconDiplayImg" />
+                        <img class="implementedTech" src="images/mysql.png" class="iconDiplayImg" />
 
 
 
@@ -190,7 +190,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary projD2" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary projD2" href='www.abdullahtayeh.co.uk'>Visit</button>
+                    <button type="button" class="btn btn-primary projD2" href='#'>Visit</button>
                 </div>
             </div>
         </div>
