--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <body>
     <section class="hero">
         <div class="card-grid">
-            <a class="card" href="./portfolio.html">
+            <a class="card" href="#">
                 <div class="background" style="background-image: url(./Images/smoothie.jpg);"></div>
                 <div class="content">
                     <!-- <p class="category">Category</p> -->
@@ -53,7 +53,7 @@
                 </div>
             </a>
 
-            <a class="card" href="#">
+            <a class="card" href="./portfolio.html">
                 <div class="background" style="background-image: url(./Images/Po.png);"></div>
                 <div class="content">
                     <!-- <p class="category">Category</p> -->
@@ -61,7 +61,7 @@
                 </div>
             </a>
 
-            <a class="card" href="#">
+            <a class="card" href="./elearning.html">
                 <div class="background" style="background-image: url(./Images/e1.jpg);"></div>
                 <div class="content">
                     <!-- <p class="category" >Category</p> -->
@@ -69,7 +69,7 @@
                 </div>
             </a>
 
-            <a class="card" href="#">
+            <a class="card" href="research.html">
                 <div class="background" style="background-image: url(./Images/sresearch.jpg);"></div>
                 <div class="content">
                     <!-- <p class="category">Category</p> -->
