--- a/elearning.html
+++ b/elearning.html
@@ -161,7 +161,7 @@
                         <img class="implementedTech" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg"
                             class="iconDiplayImg" />
 
-                        <!-- <img class="implementedTech" src="images/XAMPP.png" class="iconDiplayImg" /> -->
+                        <img class="implementedTech" src="images/XAMPP.png" class="iconDiplayImg" />
 
                         <img class="implementedTech" src="images/html-5.png" class="iconDiplayImg" />
 
@@ -169,13 +169,13 @@
 
                         <img class="implementedTech" src="images/bootstrap.png" class="iconDiplayImg" />
 
-                        <!-- <img class="implementedTech" src="images/jquery.png" class="iconDiplayImg" />
+                        <img class="implementedTech" src="images/jquery.png" class="iconDiplayImg" />
 
                         <img class="implementedTech" src="images/ajax.png" class="iconDiplayImg" />
 
-                        <img class="implementedTech"  src="images/php.png" class="iconDiplayImg" />
+                        <img class="implementedTech" src="images/php.png" class="iconDiplayImg" />
 
-                        <img class="implementedTech" src="images/mysql.png" class="iconDiplayImg" /> -->
+                        <img class="implementedTech" src="images/mysql.png" class="iconDiplayImg" />
 
 
 
@@ -190,7 +190,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary projD2" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary projD2" href='www.abdullahtayeh.co.uk'>Visit</button>
+                    <button type="button" class="btn btn-primary projD2" href='#'>Visit</button>
                 </div>
             </div>
         </div>
