--- a/index.html
+++ b/index.html
@@ -35,12 +35,23 @@
 </head>
 
 <body>
-    <H1>Welcome to the Hub </H1>
-     <h2>Your Destination for Exceptional Web Development!</h2>
-
-        At [Your Company Name], we specialize in turning your digital dreams into reality. With a passion for innovation and a commitment to excellence, we're here to transform your online presence and create captivating user experiences.
-        
-        Why Choose Us? 🚀 Expertise: Our seasoned team of web developers brings a wealth of knowledge and skill to the table, ensuring top-tier solutions tailored to your needs. 🌐 Customization: We understand that each project is unique. That's why we craft bespoke websites that align with your brand identity and objectives. 💡 Innovation: Stay ahead in the digital landscape with cutting-edge designs and the latest industry trends integrated seamlessly into your website. 🔍 User-Centric: Your audience is at the heart of what we do. We create intuitive, user-friendly interfaces that keep visitors engaged and delighted. 🌍 Responsiveness: From desktops to smartphones, your website will shine on every screen size, thanks to our dedication to responsive design.</H1>
+    <H1 class="font">Your Destination for Exceptional Web Development!</H1>
+    <br>
+     <h2 > We specialize in turning your digital dreams into reality.</h2>
+<br>
+       <h2> At Crafty Devs,</h2<h3> our mission is to create impactful web experiences that empower businesses to thrive in the digital world.</h3>
+       <br>
+       <br>
+       <br>
+       <br>
+       <br>
+       <br>
+       <br>
+       <br>
+       <br>
+       <br>
+       <br>
+      <!-- <h3> Why Choose Us? 🚀 Expertise: Our seasoned team of web developers brings a wealth of knowledge and skill to the table, ensuring top-tier solutions tailored to your needs. 🌐 Customization: We understand that each project is unique. That's why we craft bespoke websites that align with your brand identity and objectives. 💡 Innovation: Stay ahead in the digital landscape with cutting-edge designs and the latest industry trends integrated seamlessly into your website. 🔍 User-Centric: Your audience is at the heart of what we do. We create intuitive, user-friendly interfaces that keep visitors engaged and delighted. 🌍 Responsiveness: From desktops to smartphones, your website will shine on every screen size, thanks to our dedication to responsive design.</h3>  -->
     <section class="hero">
         <div class="card-grid">
             <a class="card" href="#">
@@ -94,6 +105,11 @@
 
     </section>
 
+    
+    <button id="fold-unfold" onclick="toggleContent()">Let's chat!</button>
+
+    <script src="index.js" type="text/babel"></script>
+    <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
     <div class="chatbot-container" id="containerid">
         <div id="header">
             <h1>Chatbot</h1>
@@ -115,11 +131,7 @@
             </form>
         </div>
 
-    </div>
-    <button id="fold-unfold" onclick="toggleContent()">Let's chat!</button>
-
-    <script src="index.js" type="text/babel"></script>
-    <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
 </body>
 
+</div>
 </html>
